# vimgram

./: .bifrost_session  .gitignore  Cargo.toml  README.md  glm.md  plan.md
src/: app.rs  main.rs
src/telegram/: accounts.rs  auth.rs  client.rs  mod.rs  updates.rs
src/ui/: draw.rs  input.rs
