[package]
name = "vimgram"
version = "0.1.0"
edition = "2021"
authors = ["Subh <subhajitchaudhury05@gmail.com>"]
description = "A blazing fast, Vim-native Telegram client for the terminal. Built with Rust, Ratatui, and Grammers."
license = "MIT"
repository = "https://github.com/subhdotsol/bifrost"
homepage = "https://github.com/subhdotsol/bifrost"
readme = "README.md"
keywords = ["telegram", "tui", "vim", "async", "chat"]
categories = ["command-line-utilities", "network-programming", "asynchronous"]

[dependencies]
grammers-client = "0.6"
grammers-session = "0.5"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
ratatui = "0.28"
crossterm = "0.28"
directories = "6.0.0"

